# jetbrains-web-app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.sqlx/: query-451e9cef042ae234853c81e6f642e68daa7ae9736a593b6b1a361d93d9176b93.json  query-cedbea9fa6498be792107590510303b6ad2c95a0abfa022e20c1690db5fce855.json
configuration/: base.yaml
migrations/: 20241105001129_blog-post.sql
scripts/: init_db.sh  init_docker_compose.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs  templates.rs
src/routes/: errors.rs  health_check.rs  home.rs  mod.rs  posts.rs
templates/: home.html
tests/api/: health_check.rs  helpers.rs  main.rs  posts.rs
