[package]
name = "jetbrains-web-app"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "blog-app"

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.7.7", features = ["macros", "multipart"] }
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.1"
hyper = "1.5.0"
image = "0.25.5"
once_cell = "1.20.2"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["multipart"] }
serde = { version = "1.0.214", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "migrate", "macros"] }
thiserror = "1.0.68"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["fs", "trace", "tracing"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
validator = { version = "0.19.0", features = ["derive"] }
